--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,5 +37,5 @@ jobs:
          #BRANCH: main
          #FOLDER: test
          BRANCH: gh-pages
-         FOLDER: wwwroot
+         FOLDER: main
          single-commit: true
