--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,8 +20,8 @@ jobs:
       with:
         dotnet-version: 10.x
         cache: true
-#    - name: Restore dependencies
-#      run: dotnet restore
+    - name: Restore dependencies
+      run: dotnet restore
 #    - name: Build
 #      run: dotnet build --no-restore
 #    - name: Test
