--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,24 +19,24 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 10.x
-        cache: true
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
+#        cache: true
+#    - name: Restore dependencies
+#      run: dotnet restore
+#    - name: Build
+#      run: dotnet build --no-restore
 #    - name: Test
 #      run: dotnet test --no-build --verbosity normal
     - name: install .NET Blazor
       run: dotnet workload install wasm-tools
 #      run: dotnet workload install blazor
     - name: Publish .NET
-      #run: dotnet publish -c:Release -p:GHPages=true -o main --nologo
-      run: dotnet publish -c:Release -p:GHPages=true --nologo
+      run: dotnet publish -c:Release -p:GHPages=true -o main --nologo
+#      run: dotnet publish -c:Release -p:GHPages=true --nologo
     - name: Commit wwwroot to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4
       with:
          #BRANCH: main
          #FOLDER: test
          BRANCH: gh-pages
-         #FOLDER: main
+         FOLDER: main
          single-commit: true
