--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,6 +2,7 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 name: .NET 
 on:
+  workflow_dispatch:
   push:
     branches: [ "gh-pages" ]
   pull_request:
