--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 10.x
-#        cache: true
+        cache: true
 #    - name: Restore dependencies
 #      run: dotnet restore
 #    - name: Build
